[gd_scene load_steps=4 format=3 uid="uid://dhed71hm4rhkv"]

[ext_resource type="Script" path="res://Scripts/Menus_Scripts/main_menu.gd" id="1_toi0x"]
[ext_resource type="AudioStream" uid="uid://ddca0ju4jcjn6" path="res://Music/IntoMusic1.wav" id="2_34qnl"]
[ext_resource type="Texture2D" uid="uid://1p0olltpdnsf" path="res://Assets/Location_Art/Static/IntroBG.png" id="3_aglcx"]

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_toi0x")

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 283.0
offset_top = 70.0
offset_right = 868.0
offset_bottom = 207.0
theme_override_colors/font_color = Color(0.430939, 0.0426641, 1.20327e-07, 1)
theme_override_colors/font_outline_color = Color(0.996945, 6.23293e-06, 1.54018e-06, 1)
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 50
theme_override_font_sizes/font_size = 100
text = "Life At Level"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Play_Button" type="Button" parent="."]
layout_mode = 2
offset_left = 283.0
offset_top = 218.0
offset_right = 868.0
offset_bottom = 314.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.886926, 0, 0.160764, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 64
text = "Play"

[node name="Settings_Button" type="Button" parent="."]
layout_mode = 2
offset_left = 283.0
offset_top = 323.0
offset_right = 868.0
offset_bottom = 419.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 64
text = "Settings"

[node name="Test_Button" type="Button" parent="."]
layout_mode = 2
offset_left = 283.0
offset_top = 428.0
offset_right = 868.0
offset_bottom = 524.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 64
text = "Test"

[node name="Exit_Button" type="Button" parent="."]
layout_mode = 2
offset_left = 283.0
offset_top = 533.0
offset_right = 868.0
offset_bottom = 629.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.972549, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 64
text = "Exit"

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_34qnl")
volume_db = 7.0
pitch_scale = 0.7
autoplay = true

[node name="IntroBg" type="Sprite2D" parent="."]
z_index = -900
position = Vector2(575, 344)
texture = ExtResource("3_aglcx")

[connection signal="button_up" from="Play_Button" to="." method="_on_play_button_button_up"]
[connection signal="button_up" from="Settings_Button" to="." method="_on_settings_button_button_up"]
[connection signal="button_up" from="Test_Button" to="." method="_on_test_button_button_up"]
[connection signal="button_up" from="Exit_Button" to="." method="_on_exit_button_button_up"]
